isl-rs/src/polynomial.rs

  pub fn isl_union_pw_qpolynomial_eval(upwqp: UnionPwQpolynomial, pnt: Point) -> Option<Val>;
  pub fn isl_union_pw_qpolynomial_coalesce(upwqp: UnionPwQpolynomial) -> Option<UnionPwQpolynomial>;
  pub fn isl_union_pw_qpolynomial_gist(upwqp: UnionPwQpolynomial, context: UnionSet) -> Option<UnionPwQpolynomial>;
  pub fn isl_union_pw_qpolynomial_gist_params(upwqp: UnionPwQpolynomial, context: Set) -> Option<UnionPwQpolynomial>;
  pub fn isl_union_pw_qpolynomial_align_params(upwqp: UnionPwQpolynomial, model: Space) -> Option<UnionPwQpolynomial>;
  pub fn isl_union_pw_qpolynomial_n_pw_qpolynomial(upwqp: UnionPwQpolynomialRef) -> c_int;
  pub fn isl_union_pw_qpolynomial_foreach_pw_qpolynomial(upwqp: UnionPwQpolynomialRef, fn_: unsafe extern "C" fn(pwqp: PwQpolynomial, user: *mut c_void) -> Stat, user: *mut c_void) -> Stat;
  pub fn isl_union_pw_qpolynomial_every_pw_qpolynomial(upwqp: UnionPwQpolynomialRef, test: unsafe extern "C" fn(pwqp: PwQpolynomialRef, user: *mut c_void) -> Bool, user: *mut c_void) -> Bool;
  pub fn isl_union_pw_qpolynomial_extract_pw_qpolynomial(upwqp: UnionPwQpolynomialRef, space: Space) -> Option<PwQpolynomial>;
  pub fn isl_printer_print_union_pw_qpolynomial(p: Printer, upwqp: UnionPwQpolynomialRef) -> Option<Printer>;
  pub fn isl_union_pw_qpolynomial_fold_get_ctx(upwf: UnionPwQpolynomialFoldRef) -> Option<CtxRef>;
  pub fn isl_union_pw_qpolynomial_fold_dim(upwf: UnionPwQpolynomialFoldRef, type_: DimType) -> c_int;
  pub fn isl_union_pw_qpolynomial_fold_involves_nan(upwf: UnionPwQpolynomialFoldRef) -> Bool;
  pub fn isl_union_pw_qpolynomial_fold_plain_is_equal(upwf1: UnionPwQpolynomialFoldRef, upwf2: UnionPwQpolynomialFoldRef) -> Bool;
  pub fn isl_union_pw_qpolynomial_fold_from_pw_qpolynomial_fold(pwf: PwQpolynomialFold) -> Option<UnionPwQpolynomialFold>;
  pub fn isl_union_pw_qpolynomial_fold_zero_ctx(ctx: CtxRef, type_: Fold) -> Option<UnionPwQpolynomialFold>;
  pub fn isl_union_pw_qpolynomial_fold_zero_space(space: Space, type_: Fold) -> Option<UnionPwQpolynomialFold>;
  pub fn isl_union_pw_qpolynomial_fold_zero(space: Space, type_: Fold) -> Option<UnionPwQpolynomialFold>;
  pub fn isl_union_pw_qpolynomial_fold_fold_pw_qpolynomial_fold(upwqp: UnionPwQpolynomialFold, pwqp: PwQpolynomialFold) -> Option<UnionPwQpolynomialFold>;
  pub fn isl_union_pw_qpolynomial_fold_free(upwf: UnionPwQpolynomialFold) -> *mut c_void;
  pub fn isl_union_pw_qpolynomial_fold_copy(upwf: UnionPwQpolynomialFoldRef) -> Option<UnionPwQpolynomialFold>;
  pub fn isl_union_pw_qpolynomial_fold_fold(upwf1: UnionPwQpolynomialFold, upwf2: UnionPwQpolynomialFold) -> Option<UnionPwQpolynomialFold>;
  pub fn isl_union_pw_qpolynomial_fold_add_union_pw_qpolynomial(upwf: UnionPwQpolynomialFold, upwqp: UnionPwQpolynomial) -> Option<UnionPwQpolynomialFold>;
  pub fn isl_union_pw_qpolynomial_fold_scale_val(upwf: UnionPwQpolynomialFold, v: Val) -> Option<UnionPwQpolynomialFold>;
  pub fn isl_union_pw_qpolynomial_fold_scale_down_val(upwf: UnionPwQpolynomialFold, v: Val) -> Option<UnionPwQpolynomialFold>;
  pub fn isl_union_pw_qpolynomial_fold_domain(upwf: UnionPwQpolynomialFold) -> Option<UnionSet>;
  pub fn isl_union_pw_qpolynomial_fold_intersect_domain_space(upwf: UnionPwQpolynomialFold, space: Space) -> Option<UnionPwQpolynomialFold>;
  pub fn isl_union_pw_qpolynomial_fold_intersect_domain_union_set(upwf: UnionPwQpolynomialFold, uset: UnionSet) -> Option<UnionPwQpolynomialFold>;
  pub fn isl_union_pw_qpolynomial_fold_intersect_domain(upwf: UnionPwQpolynomialFold, uset: UnionSet) -> Option<UnionPwQpolynomialFold>;
  pub fn isl_union_pw_qpolynomial_fold_intersect_domain_wrapped_domain(upwf: UnionPwQpolynomialFold, uset: UnionSet) -> Option<UnionPwQpolynomialFold>;
  pub fn isl_union_pw_qpolynomial_fold_intersect_domain_wrapped_range(upwf: UnionPwQpolynomialFold, uset: UnionSet) -> Option<UnionPwQpolynomialFold>;
  pub fn isl_union_pw_qpolynomial_fold_intersect_params(upwf: UnionPwQpolynomialFold, set: Set) -> Option<UnionPwQpolynomialFold>;
  pub fn isl_union_pw_qpolynomial_fold_subtract_domain_union_set(upwf: UnionPwQpolynomialFold, uset: UnionSet) -> Option<UnionPwQpolynomialFold>;
  pub fn isl_union_pw_qpolynomial_fold_subtract_domain_space(upwf: UnionPwQpolynomialFold, space: Space) -> Option<UnionPwQpolynomialFold>;
  pub fn isl_union_pw_qpolynomial_fold_subtract_domain(upwf: UnionPwQpolynomialFold, uset: UnionSet) -> Option<UnionPwQpolynomialFold>;
  pub fn isl_union_pw_qpolynomial_fold_get_type(upwf: UnionPwQpolynomialFoldRef) -> Fold;
  pub fn isl_union_pw_qpolynomial_fold_get_space(upwf: UnionPwQpolynomialFoldRef) -> Option<Space>;
  pub fn isl_union_pw_qpolynomial_fold_get_pw_qpolynomial_fold_list(upwf: UnionPwQpolynomialFoldRef) -> Option<PwQpolynomialFoldList>;
  pub fn isl_union_pw_qpolynomial_fold_set_dim_name(upwf: UnionPwQpolynomialFold, type_: DimType, pos: c_uint, s: Option<CStr>) -> Option<UnionPwQpolynomialFold>;
  pub fn isl_union_pw_qpolynomial_fold_find_dim_by_name(upwf: UnionPwQpolynomialFoldRef, type_: DimType, name: Option<CStr>) -> c_int;
  pub fn isl_union_pw_qpolynomial_fold_drop_dims(upwf: UnionPwQpolynomialFold, type_: DimType, first: c_uint, n: c_uint) -> Option<UnionPwQpolynomialFold>;
  pub fn isl_union_pw_qpolynomial_fold_reset_user(upwf: UnionPwQpolynomialFold) -> Option<UnionPwQpolynomialFold>;
  pub fn isl_union_pw_qpolynomial_fold_eval(upwf: UnionPwQpolynomialFold, pnt: Point) -> Option<Val>;
  pub fn isl_union_pw_qpolynomial_fold_coalesce(upwf: UnionPwQpolynomialFold) -> Option<UnionPwQpolynomialFold>;
  pub fn isl_union_pw_qpolynomial_fold_gist(upwf: UnionPwQpolynomialFold, context: UnionSet) -> Option<UnionPwQpolynomialFold>;
  pub fn isl_union_pw_qpolynomial_fold_gist_params(upwf: UnionPwQpolynomialFold, context: Set) -> Option<UnionPwQpolynomialFold>;
  pub fn isl_union_pw_qpolynomial_fold_align_params(upwf: UnionPwQpolynomialFold, model: Space) -> Option<UnionPwQpolynomialFold>;
  pub fn isl_union_pw_qpolynomial_fold_n_pw_qpolynomial_fold(upwf: UnionPwQpolynomialFoldRef) -> c_int;
  pub fn isl_union_pw_qpolynomial_fold_foreach_pw_qpolynomial_fold(upwf: UnionPwQpolynomialFoldRef, fn_: unsafe extern "C" fn(pwf: PwQpolynomialFold, user: *mut c_void) -> Stat, user: *mut c_void) -> Stat;
  pub fn isl_union_pw_qpolynomial_fold_every_pw_qpolynomial_fold(upwf: UnionPwQpolynomialFoldRef, test: unsafe extern "C" fn(pwf: PwQpolynomialFoldRef, user: *mut c_void) -> Bool, user: *mut c_void) -> Bool;
  pub fn isl_union_pw_qpolynomial_fold_extract_pw_qpolynomial_fold(upwf: UnionPwQpolynomialFoldRef, space: Space) -> Option<PwQpolynomialFold>;
  pub fn isl_printer_print_union_pw_qpolynomial_fold(p: Printer, upwf: UnionPwQpolynomialFoldRef) -> Option<Printer>;
  pub fn isl_union_pw_qpolynomial_bound(upwqp: UnionPwQpolynomial, type_: Fold, tight: *mut Bool) -> Option<UnionPwQpolynomialFold>;
  pub fn isl_union_set_apply_union_pw_qpolynomial_fold(uset: UnionSet, upwf: UnionPwQpolynomialFold, tight: *mut Bool) -> Option<UnionPwQpolynomialFold>;
  pub fn isl_union_map_apply_union_pw_qpolynomial_fold(umap: UnionMap, upwf: UnionPwQpolynomialFold, tight: *mut Bool) -> Option<UnionPwQpolynomialFold>;
  pub fn isl_union_pw_qpolynomial_to_polynomial(upwqp: UnionPwQpolynomial, sign: c_int) -> Option<UnionPwQpolynomial>;
  pub fn isl_pw_qpolynomial_list_get_ctx(list: PwQpolynomialListRef) -> Option<CtxRef>;
  pub fn isl_pw_qpolynomial_list_from_pw_qpolynomial(el: PwQpolynomial) -> Option<PwQpolynomialList>;
  pub fn isl_pw_qpolynomial_list_alloc(ctx: CtxRef, n: c_int) -> Option<PwQpolynomialList>;
  pub fn isl_pw_qpolynomial_list_copy(list: PwQpolynomialListRef) -> Option<PwQpolynomialList>;
  pub fn isl_pw_qpolynomial_list_free(list: PwQpolynomialList) -> *mut c_void;
  pub fn isl_pw_qpolynomial_list_add(list: PwQpolynomialList, el: PwQpolynomial) -> Option<PwQpolynomialList>;
  pub fn isl_pw_qpolynomial_list_insert(list: PwQpolynomialList, pos: c_uint, el: PwQpolynomial) -> Option<PwQpolynomialList>;
  pub fn isl_pw_qpolynomial_list_drop(list: PwQpolynomialList, first: c_uint, n: c_uint) -> Option<PwQpolynomialList>;
  pub fn isl_pw_qpolynomial_list_clear(list: PwQpolynomialList) -> Option<PwQpolynomialList>;
  pub fn isl_pw_qpolynomial_list_swap(list: PwQpolynomialList, pos1: c_uint, pos2: c_uint) -> Option<PwQpolynomialList>;
  pub fn isl_pw_qpolynomial_list_reverse(list: PwQpolynomialList) -> Option<PwQpolynomialList>;
  pub fn isl_pw_qpolynomial_list_concat(list1: PwQpolynomialList, list2: PwQpolynomialList) -> Option<PwQpolynomialList>;
  pub fn isl_pw_qpolynomial_list_size(list: PwQpolynomialListRef) -> c_int;
  pub fn isl_pw_qpolynomial_list_n_pw_qpolynomial(list: PwQpolynomialListRef) -> c_int;
  pub fn isl_pw_qpolynomial_list_get_at(list: PwQpolynomialListRef, index: c_int) -> Option<PwQpolynomial>;
  pub fn isl_pw_qpolynomial_list_get_pw_qpolynomial(list: PwQpolynomialListRef, index: c_int) -> Option<PwQpolynomial>;
  pub fn isl_pw_qpolynomial_list_set_pw_qpolynomial(list: PwQpolynomialList, index: c_int, el: PwQpolynomial) -> Option<PwQpolynomialList>;
  pub fn isl_pw_qpolynomial_list_foreach(list: PwQpolynomialListRef, fn_: unsafe extern "C" fn(el: PwQpolynomial, user: *mut c_void) -> Stat, user: *mut c_void) -> Stat;
  pub fn isl_pw_qpolynomial_list_every(list: PwQpolynomialListRef, test: unsafe extern "C" fn(el: PwQpolynomialRef, user: *mut c_void) -> Bool, user: *mut c_void) -> Bool;
  pub fn isl_pw_qpolynomial_list_map(list: PwQpolynomialList, fn_: unsafe extern "C" fn(el: PwQpolynomial, user: *mut c_void) -> Option<PwQpolynomial>, user: *mut c_void) -> Option<PwQpolynomialList>;
  pub fn isl_pw_qpolynomial_list_sort(list: PwQpolynomialList, cmp: unsafe extern "C" fn(a: PwQpolynomialRef, b: PwQpolynomialRef, user: *mut c_void) -> c_int, user: *mut c_void) -> Option<PwQpolynomialList>;
  pub fn isl_pw_qpolynomial_list_foreach_scc(list: PwQpolynomialListRef, follows: unsafe extern "C" fn(a: PwQpolynomialRef, b: PwQpolynomialRef, user: *mut c_void) -> Bool, follows_user: *mut c_void, fn_: unsafe extern "C" fn(scc: PwQpolynomialList, user: *mut c_void) -> Stat, fn_user: *mut c_void) -> Stat;
  pub fn isl_pw_qpolynomial_list_to_str(list: PwQpolynomialListRef) -> Option<CString>;
  pub fn isl_printer_print_pw_qpolynomial_list(p: Printer, list: PwQpolynomialListRef) -> Option<Printer>;
  pub fn isl_pw_qpolynomial_list_dump(list: PwQpolynomialListRef) -> ();
  pub fn isl_pw_qpolynomial_fold_list_get_ctx(list: PwQpolynomialFoldListRef) -> Option<CtxRef>;
  pub fn isl_pw_qpolynomial_fold_list_from_pw_qpolynomial_fold(el: PwQpolynomialFold) -> Option<PwQpolynomialFoldList>;
  pub fn isl_pw_qpolynomial_fold_list_alloc(ctx: CtxRef, n: c_int) -> Option<PwQpolynomialFoldList>;
  pub fn isl_pw_qpolynomial_fold_list_copy(list: PwQpolynomialFoldListRef) -> Option<PwQpolynomialFoldList>;
  pub fn isl_pw_qpolynomial_fold_list_free(list: PwQpolynomialFoldList) -> *mut c_void;
  pub fn isl_pw_qpolynomial_fold_list_add(list: PwQpolynomialFoldList, el: PwQpolynomialFold) -> Option<PwQpolynomialFoldList>;
  pub fn isl_pw_qpolynomial_fold_list_insert(list: PwQpolynomialFoldList, pos: c_uint, el: PwQpolynomialFold) -> Option<PwQpolynomialFoldList>;
  pub fn isl_pw_qpolynomial_fold_list_drop(list: PwQpolynomialFoldList, first: c_uint, n: c_uint) -> Option<PwQpolynomialFoldList>;
  pub fn isl_pw_qpolynomial_fold_list_clear(list: PwQpolynomialFoldList) -> Option<PwQpolynomialFoldList>;
  pub fn isl_pw_qpolynomial_fold_list_swap(list: PwQpolynomialFoldList, pos1: c_uint, pos2: c_uint) -> Option<PwQpolynomialFoldList>;
  pub fn isl_pw_qpolynomial_fold_list_reverse(list: PwQpolynomialFoldList) -> Option<PwQpolynomialFoldList>;
  pub fn isl_pw_qpolynomial_fold_list_concat(list1: PwQpolynomialFoldList, list2: PwQpolynomialFoldList) -> Option<PwQpolynomialFoldList>;
  pub fn isl_pw_qpolynomial_fold_list_size(list: PwQpolynomialFoldListRef) -> c_int;
  pub fn isl_pw_qpolynomial_fold_list_n_pw_qpolynomial_fold(list: PwQpolynomialFoldListRef) -> c_int;
